inou/prp/tests/errors/fcall_arg_unknown_name.prp
/*
:name: fcall_arg_unknown_name
:type: error
:error: unknown|undefined|argument|parameter|c
*/

// Named call arguments must match a formal parameter.

pipe[1] mix(a:u8, b:u8) -> (r:u9) { r = a + b }
assert(mix(a = 1, c = 2) == 3) // locate_error_here
